Name:                quicktest
Version:             0.1
Synopsis:            Empty
Description:         Simplifies running unit tests.
License:             MIT
Author:              David Siegel
Maintainer:          djsiegel@gmail.com
Stability:           Experimental
Category:            Testing
Build-type:          Simple
Cabal-version:       >=1.2

Executable quicktest
  hs-source-dirs: src
  main-is: Main.hs
  extensions: NamedFieldPuns

  Build-depends:
    base >= 4,
    haskell98,
    process

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -funbox-strict-fields -O2
